refactored dao and book model